...
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(vertical = 24.dp, horizontal = 16.dp),
                horizontalAlignment = Alignment.Start
            ) {
                Text(
                    text= "Crée un compte",
                    style = MaterialTheme.typography.titleLarge.copy(
                        fontWeight = FontWeight.Bold,
                        fontSize = 36.sp
                    ),
                    color = MaterialTheme.colorScheme.onSurface
                )
...

                Spacer(modifier = Modifier.height(8.dp))

                OutlinedTextField(
                    value = viewModel.mail,
                    onValueChange = { viewModel.updateMail(it) },
                    placeholder = { Text("nom@exemple.com") },
                    singleLine = true,
                    shape = RoundedCornerShape(8.dp),
                    modifier = Modifier
                        .fillMaxWidth()
                        .heightIn(min = 64.dp)
                        .border(width = 3.dp, MaterialTheme.colorScheme.outline, RoundedCornerShape(8.dp)),
...
                Column(modifier = Modifier.fillMaxWidth()) {
                    OutlinedTextField(
                        value = viewModel.password,
                        visualTransformation = PasswordVisualTransformation(),
                        onValueChange = { viewModel.updatePassword(it) },
                        isError = showPasswordError,
                        placeholder = { Text("•••••••••") },
                        singleLine = true,
                        shape = RoundedCornerShape(8.dp),
                        modifier = Modifier.fillMaxWidth()
                            .border(
                                width = 3.dp,
                                color = if (showPasswordError) MaterialTheme.colorScheme.error else MaterialTheme.colorScheme.outline,
...
